# backend/models.py
@@ -210,13 +210,6 @@ class GroupOut(BaseModel):
     class Config:
         from_attributes = True
 
-class RawFileCreate(BaseModel):
-    file_name: str
-    human_name: str
-    description: Optional[str]
-    type: RawFileType
-    meeting_id: int
-
 class RawFileOut(BaseModel):
     id: int
     human_name:str
